--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "notepad",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.0",
+  "description": "SharePad is an online notepad that allows you to easily share and collaborate on text and related content with others, without the need for a login or account.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pratham",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "nodemon": "^2.0.22"
   }
 }
