--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SharePad",
+  "name": "sharepad",
   "version": "1.1.0",
   "description": "SharePad is an online notepad that allows you to easily share and collaborate on text and related content with others, without the need for a login or account.",
   "main": "index.js",
