--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sharepad",
   "version": "1.2.0",
   "description": "SharePad is an online notepad that allows you to easily share and collaborate on text and related content with others, without the need for a login or account.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,10 +10,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mongoose": "^7.3.1",
     "nodemon": "^2.0.22"
   }
 }
