--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.3.1",
+    "geoip-lite": "^1.4.7",
+    "mongoose": "^7.3.1"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.22"
   }
 }
