Update env varibales

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,5 @@
 SALT_ROUNDS = '10'
-PASSWORD = 'password'
+MONGODB_URL = mongodb://localhost:27017/sharepadDB
+EMAIL_PUBLIC_KEY = EmailJs_Public_Key
+EMAIL_SERVICE_KEY = EmailJs_Service_Key
+EMAIL_TEMPLATE_ID = EmailJs_Template_ID
