--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "geoip-lite": "^1.4.7",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
